@@ -1,8 +1,8 @@
 PREFIX=$(HOME)/usr
 PROJNAME=liw
-VERSION=1.2.6
+VERSION=1.2.7
 
-DEPENDENCY="zeda=1.6.3"
+DEPENDENCY="zeda=1.6.4"
 
 # dynamic linker (libdl)
 CONFIG_USE_LIBDL=y
